--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 server.port = 9091
-cloud.aws.credentials.access-key = aws-access-key
-cloud.aws.credentials.secret-key = aws-secret-key
+cloud.aws.credentials.access-key = AKIARKAJK46GNNBD3JG2
+cloud.aws.credentials.secret-key = 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
 cloud.aws.region.static = ap-south-1
 cloud.aws.region.auto = false
-cloud.aws.end-point.uri = https://sqs.ap-south-1.amazonaws.com/090213902220/first_sqs_queue
+cloud.aws.end-point.uri = https://sqs.ap-south-1.amazonaws.com/090213902220/second_sqs_queue
+
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+# default path: h2-console
+spring.h2.console.path=/h2-console
